--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
     - 1.3
     - 1.4
     - tip
-before_script:
+install:
     - go get github.com/stretchr/testify/assert
 script:
     - make check
