--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: go
 go:
-    - 1.1
-    - 1.2
-    - 1.3
-    - 1.4
-    - tip
+  - 1.1
+  - 1.2
+  - 1.3
+  - 1.4
+  - tip
 install:
-    - go get github.com/stretchr/testify/assert
+  - go get github.com/stretchr/testify/assert
 script:
-    - make check
+  - make check
+notifications:
+  email: false
